kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restapi
  namespace: test
  labels:
    app: restapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restapi
  template:
    metadata:
      labels:
        app: restapi
    spec:
      containers:
      - name: springboot
        image: 847322629192.dkr.ecr.ap-northeast-2.amazonaws.com/restapi:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        volumeMounts:
        - name: timezone-config
          mountPath: /etc/localtime
      volumes:
      - name: timezone-config
        hostPath:
          path: /usr/share/zoneinfo/Asia/Seoul
      #nodeSelector:
      #  node-role.kubernetes.io/worker: "true"
