kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tbiz-atcl-net-restapi
  namespace: test
  labels:
    app: restapi
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: api.tbiz-atcl.net
    http:
      paths:
      - path: /
        backend:
          serviceName: restapi
          servicePort: 8080
